--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>{{title}}</h1>
 <h2>My favorite hero is: {{myHero}}</h2>
+<h1>Hero List</h1>
+<div>
+  <ul>
+    <li *ngFor="let hero of heroes">
+      {{hero}}
+    </li>
+  </ul>
+</div>
 
