--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,10 @@
 <div>
   <ul>
     <li *ngFor="let hero of heroes">
-      {{hero}}
+      <label>{{hero.id}}</label>
+      <input type='text' value="{{hero.name}}">
     </li>
   </ul>
+  <div *ngIf="heroes.length > 3">There are more heros in the list</div>
 </div>
 
